@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 31-05-2006 changed: Cleaned up a few unnecessary settings.
  - 31-05-2006 fixed: [ 1496367 ] playselected pos in playlist.
  - 31-05-2006 changed: New my programs system is now the default.  Removed old code.
  - 31-05-2006 changed: Cleaned up the animation code a little.
